--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ alpaca-py==0.31.0
 alpaca-trade-api==3.2.0
 alpha_vantage==3.0.0
 annotated-types==0.7.0
+anyio==4.8.0
 appdirs==1.4.4
 APScheduler==3.10.4
 asttokens==2.4.1
@@ -24,20 +25,13 @@ cryptography==43.0.3
 cycler==0.12.1
 decorator==5.1.1
 deprecation==2.1.0
+distro==1.9.0
 dnspython==2.7.0
 duckdb==1.1.2
 email_validator==2.2.0
 exchange_calendars==4.5.7
 executing==2.1.0
 filelock==3.16.1
-Flask==3.0.3
-Flask-Login==0.6.3
-flask-marshmallow==1.2.1
-Flask-Principal==0.4.0
-Flask-Security==5.5.2
-Flask-SocketIO==5.4.1
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.2
 fonttools==4.54.1
 frozendict==2.4.6
 frozenlist==1.5.0
@@ -45,6 +39,8 @@ fsspec==2024.10.0
 h11==0.14.0
 holidays==0.59
 html5lib==1.1
+httpcore==1.0.7
+httpx==0.28.1
 huggingface-hub==0.26.2
 ibapi==9.81.1.post1
 idna==3.10
@@ -56,11 +52,13 @@ ipython==8.29.0
 itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
+jiter==0.9.0
+joblib==1.4.2
 jsonpickle==3.3.0
 kiwisolver==1.4.7
 korean-lunar-calendar==0.3.1
-lumibot==3.8.1
-lumiwealth-tradier==0.1.12
+lumibot==3.9.17
+lumiwealth-tradier==0.1.16
 lxml==5.3.0
 MarkupSafe==3.0.2
 marshmallow==3.23.0
@@ -73,7 +71,8 @@ msgpack==1.0.3
 multidict==6.1.0
 multitasking==0.0.11
 networkx==3.4.2
-numpy==1.26.4
+numpy==2.2.3
+openai==1.66.3
 packaging==24.1
 pandas==2.2.3
 pandas-datareader==0.10.0
@@ -101,6 +100,7 @@ pydantic_core==2.23.4
 Pygments==2.18.0
 pyluach==2.2.0
 pyparsing==3.2.0
+PySocks==1.7.1
 pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -113,11 +113,14 @@ quantstats-lumi==0.3.3
 regex==2024.9.11
 requests==2.32.3
 safetensors==0.4.5
+scikit-learn==1.6.1
 scipy==1.14.1
 seaborn==0.13.2
 setuptools==75.3.0
 simple-websocket==1.1.0
 six==1.16.0
+sniffio==1.3.1
+snscrape==0.7.0.20230622
 soupsieve==2.6
 SQLAlchemy==2.0.36
 sseclient-py==1.8.0
@@ -127,6 +130,7 @@ tabulate==0.9.0
 tenacity==9.0.0
 termcolor==2.5.0
 thetadata==0.9.11
+threadpoolctl==3.6.0
 timedelta==2020.12.3
 tokenizers==0.20.1
 toolz==1.0.0
@@ -150,4 +154,4 @@ wget==3.2
 wsproto==1.2.0
 WTForms==3.2.1
 yarl==1.17.0
-yfinance==0.2.48
+yfinance==0.2.54
